[project]
name = "msmn-interpretability"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "opt-einsum (>=3.4.0,<4.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "captum (>=0.8.0,<0.9.0)",
    "gensim (>=4.0.0,<5.0.0)",
    "nltk (>=3.8.0,<4.0.0)",
    "ujson (>=5.0.0,<6.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=1.26.0,<3.0.0)",
    "transformers (>=4.0.0,<5.0.0)",
    "h5py (>=3.16.0,<4.0.0)",
    "reformer-pytorch (>=1.4.4,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
